[project]
name = "anything2mindmap"
version = "0.1.0"
description = "从任意文本/代码生成思维导图（Canvas + PDF）"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt>=0.9",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "pdfplumber>=0.11.9",
    "playwright>=1.59.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
anything2mindmap = "anything2mindmap.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
